final working code. doom internal rapid-fire and pattern-scanning.

--- a/PatternScanningTool.vcxproj
+++ b/PatternScanningTool.vcxproj
@@ -144,7 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
-    <ClInclude Include="TrampClass.h" />
+    <ClInclude Include="TrampHook.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PatternScanner.h" />
   </ItemGroup>
